# automatic_prompt_engineer

./: pyproject.toml
automatic_prompt_engineer/: ape.py  config.py  evaluate.py  generate.py  llm.py  template.py
experiments/: run_instruction_induction.py  run_truthful_qa.py
experiments/data/instruction_induction/: load_data.py
