[tool.poetry]
name = "automatic-prompt-engineer"
version = "1.0"
description = ""
authors = ["Keiran Paster <keirp@cs.toronto.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23"
openai = "^1.21.2"
fire = "^0.6.0"
tqdm = "^4.66.2"
gradio = "^4.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
